# ray-tracer

./: README.md  cargo.toml  rust-toolchain.toml
assets/: box.json  diffuse_sphere.json  pbr_roughness.json  test.json  world.json
output/: basic_image.ppm  camera_position.ppm  depth_of_field.ppm  dieletric.ppm  diffuse_spheres.ppm  fuzzed.ppm  gamma_acne.ppm  glam.ppm  marble.ppm  metal.ppm  shaded_sphere.ppm  smoke.ppm  world.ppm
tracer/: Cargo.toml
tracer/src/: aabb.rs  bvh.rs  camera.rs  error.rs  hittable.rs  main.rs  moving_sphere.rs  ray.rs  renderer.rs  sphere.rs  vec3.rs  xy_rect.rs
tracer/src/geometry/: aabb.rs  bvh.rs  constant_medium.rs  cornell_box.rs  hittable.rs  mod.rs  moving_sphere.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
tracer/src/intersection/: hit_record.rs  mod.rs  ray.rs
tracer/src/material/: dieletric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs  pbr.rs
tracer/src/texture/: checker.rs  image.rs  mod.rs  noise.rs  perlin.rs  solid.rs  solid_color.rs
