[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glam = { version = "0.22.0", features = ["rand", "approx"] }
thiserror = "1.0.38"
rand = "0.8.5"
rand_xoshiro = "0.6.0"