[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glam = { version = "0.22.0", features = ["rand", "approx", "serde"] }
image = "0.24"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
typetag = "0.2.5"
thiserror = "1.0.38"